--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -5,8 +5,9 @@ pipeline {
     }
     agent {
       node {
-        // TODO: run this simple pipeline on jenkins 'master' node
+	label 'master'
       }
+
     }
 
     stages {
@@ -22,10 +23,19 @@ pipeline {
                 }
             }
         }
+	stage('stage 2') {
+	    steps {
+		sh 'echo hello from stage 2!'
+		}
+  	}
 
-        // TODO: ADD A STAGE THAT SAYS HELLO
-
-        // TODO: ADD AN APPROVAL STAGE
+	stage('manual approval') {
+	    steps {
+	        timeout(time: 60, unit: 'MINUTES') {
+	            input message: "Move to stage 3?"
+	        }
+	    }
+	}
 
         stage('stage 3') {
             steps {
